curso-kubernetes-ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: redirector
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules: 
  - host: "web.com"
    http: 
      paths:
        - pathType: Prefix
          path: "/home"
          backend:
            service:
              name: home
              port: 
                number: 8080
        - pathType: Prefix
          path: "/blog"
          backend:
            service:
              name: blog
              port: 
                number: 8080
  - host: "nueva.web.com"
    http: 
      paths:
        - pathType: Prefix
          path: "/home"
          backend:
            service:
              name: home
              port: 
                number: 8080
        - pathType: Prefix
          path: "/blog"
          backend:
            service:
              name: blog
              port: 
                number: 8080
